# cpp

./: .clang-format  .cmake-format  CMakeLists.txt  README.md  cpp.code-workspace  cpp.h.in  create_cmake.py
00_cpp_sortout/: CMakeLists.txt  cpp_sortout.cpp
01_c_subset/: CMakeLists.txt
01_c_subset/00_cpp_types/: CMakeLists.txt
01_c_subset/00_cpp_types/00_fundamental_types/: fundamental_types.cpp
01_c_subset/00_fundamental_types/: CMakeLists.txt  README.md  fundamental_types.cpp
01_c_subset/00_fundamental_types/01_fundamental/: fundamental_types.cpp
01_c_subset/00_fundamental_types/02_constness/: constness.cpp
01_c_subset/01_fundamental/: README.md
01_c_subset/01_fundamental_types/01_boolean_type/: CMakeLists.txt  boolean_facts.cpp
01_c_subset/01_fundamental_types/02_nullptr_type/: CMakeLists.txt  nullptr_facts.cpp
01_c_subset/01_fundamental_types/03_void_type/: CMakeLists.txt  void_facts.cpp
01_c_subset/01_fundamental_types/04_byte_type/: CMakeLists.txt  byte_facts.cpp
01_c_subset/01_integer_types/: CMakeLists.txt  README.md  todo.txt
01_c_subset/01_integer_types/00_integer_types/: CMakeLists.txt  integer_types.cpp
01_c_subset/01_integer_types/01_boolean_types/: CMakeLists.txt  boolean_types.cpp
01_c_subset/01_integer_types/01_new_cpp14/: CMakeLists.txt  cpp14.cpp
01_c_subset/01_integer_types/01_unexpected_cast/: CMakeLists.txt  unexpected_cast.cpp
01_c_subset/01_integer_types/02_character_types/: character_types.cpp
01_c_subset/01_integer_types/03_integer_types/: CMakeLists.txt  integer_types.cpp
01_c_subset/01_integer_types/03_pointer_facts/: CMakeLists.txt
01_c_subset/01_integer_types/03_types_declarations/: main.cpp
01_c_subset/01_integer_types/03_universal_init/: universal_init.cpp
01_c_subset/01_integer_types/04_unsigned/: CMakeLists.txt  unexpected_cast.cpp
01_c_subset/01_integer_types/07_overflow/: CMakeLists.txt  (+1 more)
01_c_subset/02_constness/: CMakeLists.txt  README.md
01_c_subset/02_pointer_types/: CMakeLists.txt  README.md  pointer_facts.md
01_c_subset/03_floating_point_types/: CMakeLists.txt
01_c_subset/04_arrays/: CMakeLists.txt  array_facts.cpp
01_c_subset/05_arrays/: CMakeLists.txt
01_c_subset/05_references/: CMakeLists.txt  reference_facts.cpp
01_c_subset/06_enums/: CMakeLists.txt  enum_facts.cpp
01_c_subset/06_references/: reference_facts.cpp
01_c_subset/07_bitwise/: CMakeLists.txt
01_c_subset/08_hamming_weight/: CMakeLists.txt  hamming_weight.cpp
01_c_subset/09_functions/: CMakeLists.txt  README.md  functions.cpp
01_c_subset/10_linkage/: CMakeLists.txt  about.txt  file1.cpp  file1.h  file2.cpp  linkage.cpp
01_c_subset/11_namespaces/: CMakeLists.txt  README.md  namespaces.cpp
01_c_subset/12_scopes/: CMakeLists.txt  scopes.cpp
01_c_subset/13_c_cpp/: CMakeLists.txt
01_c_subset/14_ub/: CMakeLists.txt  ub.cpp
01_integer_types/: CMakeLists.txt  todo.txt
01_integer_types/00_integer_types/: CMakeLists.txt
01_integer_types/01_compare_pointers/: CMakeLists.txt  compare_pointers.cpp
01_integer_types/01_integer_types/: integer_types.cpp
01_integer_types/02_compare_pointers/: CMakeLists.txt  compare_pointers.cpp
01_integer_types/02_pointer_facts/: CMakeLists.txt  pointer_facts.cpp
01_integer_types/03_array_facts/: CMakeLists.txt  array_facts.cpp
01_integer_types/03_pointer_facts/: pointer_facts.cpp
01_integer_types/04_array_facts/: array_facts.cpp
01_integer_types/05_reference_facts/: CMakeLists.txt  reference_facts.cpp
01_integer_types/06_enum_facts/: CMakeLists.txt  enum_facts.cpp
01_integer_types/07_unexpected_cast/: CMakeLists.txt  unexpected_cast.cpp
01_integer_types/08_bits_and_arithmetic/: CMakeLists.txt  bits_and_arithmetic.cpp
01_integer_types/09_hamming_weight/: CMakeLists.txt  hamming_weight.cpp
01_low_level/: CMakeLists.txt
01_low_level/01_fundamental_types/: CMakeLists.txt  README.md
01_low_level/02_constness/: CMakeLists.txt  README.md  constness_facts.cpp
01_low_level/02_pointer_types/: README.md  reference_facts.md
01_low_level/03_integer_types/: CMakeLists.txt  README.md
01_low_level/05_pointer_types/: CMakeLists.txt  README.md
01_low_level/06_arrays/: CMakeLists.txt  README.md
01_low_level/07_enums/: CMakeLists.txt  README.md
01_low_level/08_bitwise_ops/: CMakeLists.txt  README.md
01_low_level/08_bitwise_ops2/: CMakeLists.txt  README.md
01_low_level/09_functions/: CMakeLists.txt  README.md
01_low_level/10_linking/: CMakeLists.txt  README.md
01_low_level/11_namespaces/: CMakeLists.txt  README.md  namespaces.cpp
01_low_level/12_c_cpp/: CMakeLists.txt  README.md
01_low_level/12_scopes/: scopes.cpp
01_low_level/13_c_cpp/: README.md
01_low_level/13_ub/: README.md  ub.cpp
01_low_level/14_ub/: ub.cpp
02_floating_point_types/01_floating_point_representation/: CMakeLists.txt  floating_point_representation.cpp
02_floating_point_types/04_fp_functions/: CMakeLists.txt  fp_functions.cpp
02_floating_point_types/06_fast_integer_cast/: CMakeLists.txt  integer_cast.cpp
bitwise_operations/: CMakeLists.txt  bitwise_operations.cpp  todo.txt
bitwise_operations/01_bitwise_operations/: CMakeLists.txt  bitwise_operations.cpp
bitwise_operations/02_bits_and_arithmetic/: bits_and_arithmetic.cpp
cpp_tricks/: CMakeLists.txt  cpp_tricks.cpp
floating_point_types/: CMakeLists.txt  floating_point_types.cpp
floating_point_types/01_floating_point_representation/: CMakeLists.txt
floating_point_types/04_fp_functions/: CMakeLists.txt
floating_point_types/05_integer_cast/: integer_cast.cpp
integer_types/: CMakeLists.txt  integer_types.cpp
integer_types/01_compare_pointers/: CMakeLists.txt
integer_types/02_pointer_facts/: pointer_facts.cpp
integer_types/03_array_facts/: array_facts.cpp
integer_types/04_array_and_pointer/: CMakeLists.txt
integer_types/05_reference_facts/: reference_facts.cpp
integer_types/07_unexpected_cast/: CMakeLists.txt
integer_types/08_hamming_weight/: hamming_weight.cpp
integer_types/09_hamming_weight/: CMakeLists.txt
utilities/: CMakeLists.txt  bitwise.h  defines.h  elapsed.h  functional.h  generate.h
(+765 files in other folders)
