cmake_minimum_required(VERSION 3.10)

add_subdirectory(00_fundamental_types)
add_subdirectory(01_integer_types)
add_subdirectory(02_pointer_types)
add_subdirectory(03_floating_point_types)
add_subdirectory(04_arrays)
add_subdirectory(05_references)
add_subdirectory(06_enums)
add_subdirectory(07_bitwise)
add_subdirectory(08_hamming_weight)
add_subdirectory(09_functions)
add_subdirectory(10_linkage)
add_subdirectory(11_namespaces)
add_subdirectory(12_scopes)
