add_subdirectory(01_fundamental_types)
add_subdirectory(03_integer_types)
add_subdirectory(02_constness)
add_subdirectory(05_pointer_types)
add_subdirectory(04_floating_point_types)
add_subdirectory(06_arrays)
add_subdirectory(07_enums)
add_subdirectory(08_bitwise_ops)
add_subdirectory(09_functions)
add_subdirectory(10_linking)
add_subdirectory(11_namespaces)
add_subdirectory(12_scopes)
add_subdirectory(13_c_cpp)
# The subdirectory '14_ub' intentionally left out as it covers UB cases
