cmake_minimum_required(VERSION 3.10)

add_subdirectory(00_floating_point_representation)
add_subdirectory(01_extract_fp_components)
add_subdirectory(02_compare_fp)
add_subdirectory(03_fp_functions)
add_subdirectory(04_fp_errors)
add_subdirectory(05_fast_integer_cast)
add_subdirectory(06_fast_reverse_sqrt)
