add_subdirectory(01_bits_integer_representation)
add_subdirectory(02_bits_shifts_and_ub)
add_subdirectory(03_bits_arithmetic_tricks)
add_subdirectory(04_bits_popcount_and_scans)
add_subdirectory(05_bits_masks_and_flags)
add_subdirectory(06_bitset_and_std_types)
add_subdirectory(07_bits_radix_and_data_layout)
