add_subdirectory(01_function_identity_abi_callconv)
add_subdirectory(02_extern_c_boundaries)
add_subdirectory(03_function_types_decltype_decay_overload)
add_subdirectory(04_noexcept_is_part_of_type)
add_subdirectory(05_conditional_noexcept_and_vector_moves)
add_subdirectory(06_return_type_deduction_auto_decltype_auto)
add_subdirectory(07_constexpr_consteval_odr)
add_subdirectory(08_function_pointers_and_member_pointers)
add_subdirectory(09_variadic_functions_va_list)
